# cppNonlinear

./: .gitignore  CMakeLists.txt  README.md  a.py  install_run.ps1  pynl_bind.py  pynl_script.py  pynl_test.py  run.ps1  system_test.cpp  test.cpp  test.py  test_schema.txt  todo  todo.md  visualize.py
cppLib/: CMakeLists.txt
cppLib/include/: global.hpp  nonlinear.hpp  pynl.hpp
cppLib/src/: nonlinear.cpp  pynl.cpp
pyLib/nonlinear/: analysis.py  core.py  gui.py  plotting.py  pynl_bind.py
src/: CMakeLists.txt  analysis.cpp  analysis.hpp  global.hpp  nonlinear.cpp  nonlinear.hpp  pynl.cpp  pynl.hpp  shooting.cpp  test.cpp  test.hpp  utils.cpp  utils.hpp
test/: fiznag.py  newtest.py  pynl_test.py  system_test.cpp  test.py
test/nonlinear/: core.py  plotting.py
